# serializer version: 1
# name: test_parse_event_snapshot[scalar_int]
  ConnectionStatusEvent(satellite_id=527302, device_uuid='7b1ad1ef-91df-4e50-9004-269c139c681c', updated_at=datetime.datetime(2026, 6, 13, 23, 18, tzinfo=datetime.timezone.utc), is_connected=False, active_station=None, remaining_seconds=None, rain_delay=None)
# ---
# name: test_parse_event_snapshot[scalar_str]
  ConnectionStatusEvent(satellite_id=527302, device_uuid='7b1ad1ef-91df-4e50-9004-269c139c681c', updated_at=datetime.datetime(2026, 6, 13, 23, 18, tzinfo=datetime.timezone.utc), is_connected=False, active_station=None, remaining_seconds=None, rain_delay=None)
# ---
# name: test_parse_event_snapshot[station_epoch_timestamp]
  StationStateEvent(satellite_id=527302, device_uuid='8c756129-0000-8da0-9049-8e44b2deb091', updated_at=datetime.datetime(2026, 6, 14, 20, 22, 12, tzinfo=datetime.timezone.utc), zone=1, is_watering=True, remaining_seconds=88, program_number=34)
# ---
# name: test_parse_event_snapshot[station_normal_duration]
  StationStateEvent(satellite_id=527302, device_uuid='8c756129-0000-8da0-9049-8e44b2deb091', updated_at=datetime.datetime(2026, 6, 14, 20, 22, 12, tzinfo=datetime.timezone.utc), zone=2, is_watering=True, remaining_seconds=88, program_number=36)
# ---
# name: test_parse_event_snapshot[station_past_epoch_timestamp]
  StationStateEvent(satellite_id=527302, device_uuid='8c756129-0000-8da0-9049-8e44b2deb091', updated_at=datetime.datetime(2026, 6, 14, 20, 22, 12, tzinfo=datetime.timezone.utc), zone=1, is_watering=True, remaining_seconds=1476535243, program_number=34)
# ---
